--- a/templates/base/contact.html.twig
+++ b/templates/base/contact.html.twig
@@ -31,9 +31,8 @@
                 {{form_label(form.message, 'Votre message', {'label_attr':{'class':'fw-bold text-light'}})}}
                 {{form_widget(form.message, {'attr':{'class':'form-control text-light', 'placeholder':'Votre message'}})}}
 
-                {{form_widget(form.bouton, {'label':"Soumettre le formulaire", 'attr':{'class':'btn bg-primary mt-3 justify-content-center'}})}}
+                {{form_widget(form.bouton, {'label':"Soumettre le formulaire", 'attr':{'class':'btn btn-outline-primary mt-3 justify-content-center'}})}}
                 {{form_end(form, {render_rest: true})}} 
-        
         </div>
         <div class="col-sx-12 col-sm-12 col-md-12 col-lg-6 mt-1 justify-content-center">
             <h5 class="text-light text-center">Vous pouvez également retrouver ici nos réseaux sociaux !</h5><br>
@@ -47,6 +46,7 @@
                     Rejoins-nous sur notre serveur Discord Communautaire !</a><span class="emoji">&#127797</span>
                 </li>         
             </ul>
+            <img src="images/logo.png" class="img-fluid" alt="Logo Cactus Esport">
         </div>
     </div>
 </div>
