--- a/templates/base/rainbow-six.html.twig
+++ b/templates/base/rainbow-six.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }}Rainbow Six{% endblock %}
+{% block title %}{{ parent() }}Rainbow Six Siege{% endblock %}
 
 {% block body %}
     <h1 class="text-center text-primary">Equipe R6</h1>
