--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,6 +12,13 @@
     <div class="container mt-4">
 
     {{ form_start(registrationForm) }}
+
+        {{ form_label(registrationForm.nom, 'Votre nom', {'label_attr':{'class':'fw-bold text-light'}})}}
+        {{ form_widget(registrationForm.nom, {'attr':{'class':'form-control text-light', 'placeholder':'Votre nom', 'type':'text'}}) }}
+
+        {{ form_label(registrationForm.prenom, 'Votre prénom', {'label_attr':{'class':'fw-bold text-light'}})}}
+        {{ form_widget(registrationForm.prenom, {'attr':{'class':'form-control text-light', 'placeholder':'Votre prénom', 'type':'text'}}) }}
+
         {{ form_label(registrationForm.email, 'Votre adresse-mail', {'label_attr':{'class':'fw-bold text-light'}})}}
         {{ form_widget(registrationForm.email, {'attr':{'class':'form-control text-light', 'placeholder':'Votre adresse-mail', 'type':'email'}}) }}
 
