--- a/templates/base/contact.html.twig
+++ b/templates/base/contact.html.twig
@@ -33,7 +33,7 @@
                 {{form_widget(form.bouton, {'label':"Soumettre le formulaire", 'attr':{'class':'btn btn-outline-primary mt-3 justify-content-center'}})}}
                 {{form_end(form, {render_rest: true})}} 
         </div>
-        <div class="col-sx-12 col-sm-12 col-md-12 col-lg-6 mt-1 justify-content-center">
+        <div class="col-sx-12 col-sm-12 col-md-12 col-lg-6 mt-1 justify-content-center text-center">
             <h5 class="text-light text-center">Vous pouvez également retrouver ici nos réseaux sociaux !</h5><br>
             <ul class="list-group list-group-flush text-center">
                 <li class="list-group-item">
@@ -45,7 +45,7 @@
                     Rejoins-nous sur notre serveur Discord Communautaire !</a><span class="emoji">&#127797</span>
                 </li>         
             </ul>
-            <img src="images/logo.png" class="img-fluid" alt="Logo Cactus Esport">
+            <img src="images/logo.png" class="img-fluid" style="height: 50%" alt="Logo Cactus Esport">
         </div>
     </div>
 </div>
