--- a/templates/base/lol.html.twig
+++ b/templates/base/lol.html.twig
@@ -5,4 +5,8 @@
 {% block body %}
     <h1 class="text-center text-primary">Equipe League of Legends</h1>
 
+{% block footer %}{{ parent() }}{% endblock %}
+
 {% endblock %}
+
+
