--- a/templates/base/master-duel.html.twig
+++ b/templates/base/master-duel.html.twig
@@ -4,4 +4,9 @@
 
 {% block body %}
     <h1 class="text-center text-primary">Yu-Gi-Oh ! Master Duel</h1>
+
+{% block footer %}{{ parent() }}{% endblock %}
+
+
 {% endblock %}
+
