--- a/templates/base/rainbow-six.html.twig
+++ b/templates/base/rainbow-six.html.twig
@@ -5,4 +5,7 @@
 {% block body %}
     <h1 class="text-center text-primary">Equipe R6</h1>
 
+{% block footer %}{{ parent() }}{% endblock %}
+
 {% endblock %}
+
