--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,9 +46,6 @@
           <a class="nav-link active" href="{{path('app_article_index')}}">Actualités</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="{{path('about')}}">Staff</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link active" href="{{path('contact')}}">Contact</a>
         </li>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
@@ -121,16 +118,11 @@
                 <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z"/>
               </svg>
             </a>
-            <a class="btn btn-outline-light btn-floating m-1" href="https://www.paypal.com/donate/?hosted_button_id=4M3UJQ3TC6VT4" role="button">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-paypal" viewBox="0 0 16 16">
-                <path d="M14.06 3.713c.12-1.071-.093-1.832-.702-2.526C12.628.356 11.312 0 9.626 0H4.734a.7.7 0 0 0-.691.59L2.005 13.509a.42.42 0 0 0 .415.486h2.756l-.202 1.28a.628.628 0 0 0 .62.726H8.14c.429 0 .793-.31.862-.731l.025-.13.48-3.043.03-.164.001-.007a.351.351 0 0 1 .348-.297h.38c1.266 0 2.425-.256 3.345-.91.379-.27.712-.603.993-1.005a4.942 4.942 0 0 0 .88-2.195c.242-1.246.13-2.356-.57-3.154a2.687 2.687 0 0 0-.76-.59l-.094-.061ZM6.543 8.82a.695.695 0 0 1 .321-.079H8.3c2.82 0 5.027-1.144 5.672-4.456l.003-.016c.217.124.4.27.548.438.546.623.679 1.535.45 2.71-.272 1.397-.866 2.307-1.663 2.874-.802.57-1.842.815-3.043.815h-.38a.873.873 0 0 0-.863.734l-.03.164-.48 3.043-.024.13-.001.004a.352.352 0 0 1-.348.296H5.595a.106.106 0 0 1-.105-.123l.208-1.32.845-5.214Z"/>
-              </svg>
-            </a>
           </section>
 
           <section class="">
             <div class="row">
-              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
                 <ul class="list-unstyled mb-0">
                   <li>
                     <a href="{{path('index')}}" class="text-white">Accueil</a>
@@ -139,46 +131,14 @@
                     <a href="{{path('shop')}}" class="text-white">Shop</a>
                   </li>
                   <li>
-                    <a href="#!" class="text-white">Link 3</a>
-                  </li>
-                  <li>
-                    <a href="{{path('about')}}" class="text-white">Staff</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                <ul class="list-unstyled mb-0">
-                  <li>
                     <a href="{{path('app_article_index')}}" class="text-white">Actualités</a>
                   </li>
                   <li>
-                    <a href="#!" class="text-white">Link 2</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Link 3</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Link 4</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                <ul class="list-unstyled mb-0">
-                  <li>
                     <a href="{{path('contact')}}" class="text-white">Contact</a>
                   </li>
-                  <li>
-                    <a href="#!" class="text-white">Privacy</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Link 3</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Link 4</a>
-                  </li>
                 </ul>
               </div>
-              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
                 <ul class="list-unstyled mb-0">
                   <li>
                     <a href="{{path('master-duel')}}" class="text-white">Yu-Gi-Oh ! Master Duel</a>
@@ -186,6 +146,9 @@
                   <li>
                     <a href="{{path('rainbow-six')}}" class="text-white">Rainbow Six Siege</a>
                   </li>
+                  <li>
+                    <a href="{{path('league-of-legends')}}" class="text-white">League of Legends</a>
+                  </li>                  
                   <li>
                     <a href="{{path('contact')}}" class="text-white">Rejoignez-nous</a>
                   </li>
@@ -196,8 +159,9 @@
 
         </div>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2022 Copyright:
-          <a class="text-white" href="https://cactus-esport.fr/">Cactus Esport</a>
+          © 2023 Copyright:
+          <a class="text-white" href="https://cactus-esport.fr/">Cactus Esport</a><br/>
+          <a class="text-white" href="{{path('mentions-legales')}}">Mentions légales</a>
         </div>
       </footer>
     {% endblock %}
